--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.4.5",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
+    "react-css-modules": "^3.7.10",
     "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
